[package]
name = "asmpeach"
version = "0.1.46"
authors = ["Drumato <drumatech109@gmail.com>"]
edition = "2018"
license = "MIT"
description = "x86_64 assembler"
documentation = "https://docs.rs/asmpeach"
homepage = "https://github.com/Drumato/asmpeach"
repository = "https://github.com/Drumato/asmpeach"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf-utilities = "0.1.73"
indexmap = "1.5.1"

